fix product section space on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -950,7 +950,7 @@ header>.toolbar { /* Hide toolbar menu */
     }
 
     .product-section {
-        margin-top: 1500px;
+        margin-top: 1700px;
     }
 }
 
